# rsserpent-plugin-slackware-news

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
rsserpent_plugin_slackware_news/: __init__.py  route.py
tests/: test_route.py
