[tool.poetry]
name = "rsserpent-plugin-slackware-news"
version = "0.1.0"

authors = ["EkkoG <beijiu572@gmail.com>"]
description = "An rsserpent plugin for news."
keywords = ["rss"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
rsserpent-rev = ">=0.1.4"
lxml = "^5.2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.15.0"
uvicorn = "^0.29.0"
# testing
[tool.poetry.group.tests.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.15.1"
pytest-cov = "^3.0.0"
pytest-randomly = "^3.10.1"
pytest-xdist = "^2.3.0"
requests = "^2.26.0"

[tool.poetry.plugins."rsserpent.plugin"]
"slackware-news" = "rsserpent_plugin_slackware_news:plugin"

[tool.black]
include = '\.pyi?$'
target-version = ["py310"]

[tool.coverage.run]
include = ["rsserpent_plugin_slackware_news/*"]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover"
]

[tool.isort]
balanced_wrapping = true
combine_as_imports = true
lines_after_imports = 2
profile = "black"

[tool.nitpick]
style = "https://raw.githubusercontent.com/RSSerpent-Rev/RSSerpent/master/styles/main.toml"
cache = "1 day"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
