[tool.poetry]
name = "rsserpent-plugin-slackware-news"
version = "0.1.0"

authors = ["EkkoG <beijiu572@gmail.com>"]
description = "An rsserpent plugin for news."
keywords = ["rss"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
rsserpent-rev = ">=0.1.4"
lxml = "^5.2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.15.0"
uvicorn = "^0.29.0"
# testing
[tool.poetry.group.tests.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.15.1"
pytest-cov = "^3.0.0"
pytest-randomly = "^3.10.1"
pytest-xdist = "^2.3.0"
requests = "^2.26.0"

[tool.poetry.plugins."rsserpent.plugin"]
"slackware-news" = "rsserpent_plugin_slackware_news:plugin"

[tool.coverage.run]
include = ["rsserpent_plugin_slackware_news/*"]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover"
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
exclude = [ ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "site-packages", "venv",]

[tool.mypy]
plugins = [ "pydantic.mypy",]
pretty = true
python_version = "3.10"
show_error_codes = true
strict = true
[[tool.mypy.overrides]]
module = [ "pyquery.*",]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff.lint]
select = [ "E", "F", "UP", "B", "SIM", "I", "A", "C4", "DTZ", "T10", "ERA", "T20", "N", "TRY", "PGH",]
fixable = [ "ALL",]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.nitpick]
style = "https://raw.githubusercontent.com/RSSerpent-Rev/RSSerpent/master/styles/main.toml"
cache = "1 day"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
